--- a/exploration/data-exploration.ipynb
+++ b/exploration/data-exploration.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "import umap.plot\n",
-    "umap.plot.points(manifold, labels=np.array(y), theme=\"fire\")"
+    "umap.plot.points(manifold, labels=y, theme=\"fire\")"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "source": [
     "import umap.plot\n",
     "manifold, y = compute_manifold(val_set, n_samples=1000, transform=transform, is_random=True)\n",
-    "umap.plot.points(manifold, labels=np.array(y), theme=\"fire\")"
+    "umap.plot.points(manifold, labels=y, theme=\"fire\")"
    ]
   },
   {
