Clean up and instructions with checkpoint link:

--- a/exploration/data-exploration.ipynb
+++ b/exploration/data-exploration.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "81cffe0f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.OutputArea.auto_scroll_threshold = 9999\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "IPython.OutputArea.auto_scroll_threshold = 9999"
@@ -26,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3a5ae15e",
    "metadata": {},
    "outputs": [],
@@ -116,7 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = torchaudio.transforms.MFCC(n_mfcc=10)\n",
+    "kwargs = {\n",
+    "    'n_mels': 64\n",
+    "}\n",
+    "transform = torchaudio.transforms.MFCC(n_mfcc=13, melkwargs=kwargs)\n",
     "inspect_samples(dataset=val_set, n_samples=10, transform=transform, is_random=True)"
    ]
   },
